# beam-inspector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
beams/: README.md  dot_8b.pgm  dot_8b_ast.pgm  empty_gray.pgm  empty_noise.pgm  empty_white.pgm  empty_zero.pgm
calc/: README.md  beam1.c  beam1.cmd  beam_0.c  beam_0.cmd  beam_1.c  beam_1.cmd  beam_2.c  beam_2.cmd  bg0.c  bg0.cmd  bg1.c  bg1.cmd  ids_capture.c  ids_gfa.c  ids_gfa.cmd  lbs_multi.py  lbs_single.ipynb  pgm.h  render1.cmd  render_1.c  render_1.cmd  requirements.txt
calc/base/: beam0.c  beam0.cmd  beam1.c  beam2.c  beam2.cmd  bg0.c  bg1.c  lbs_multi.py  render.ipynb  render1.c
calc/gpu/: cl0.cpp  cl1.cpp  cl2.cpp  run.cmd
calc/ids/: ids_capture.c  ids_capture.cmd
calc/mem/: track_mem.ps1
calc/stabil/: colormap.ipynb  demo.csv  stabil.ipynb
calc/ver/: README.md  ver.cpp
docs/: build.md
img/: about_bg.xcf
install/win/: cignus.iss  project.iss
libs/beam_calc/: CMakeLists.txt  beam_calc.c  beam_calc.cmd  beam_calc.h  beam_calc.hpp  main.c
libs/beam_render/: CMakeLists.txt  beam_render.c  beam_render.cmd  beam_render.h  main.c
libs/qcustomplot/: CMakeLists.txt  colorgradient.cpp  colorgradient.h  core.cpp  core.h  datacontainer.h  global.h  item.cpp  item.h  layer.cpp  layer.h  layout.cpp  layout.h  lineending.cpp  lineending.h  paintbuffer.cpp  paintbuffer.h  painter.cpp  painter.h  plottable.cpp  plottable.h  plottable1d.h  qcp.h  scatterstyle.cpp  scatterstyle.h  selection.cpp  selection.h  selectiondecorator-bracket.cpp  selectiondecorator-bracket.h  selectionrect.cpp  selectionrect.h  vector2d.cpp  vector2d.h
libs/qcustomplot/axis/: axis.cpp  axis.h  axisticker.cpp  axisticker.h  axistickerdatetime.cpp  axistickerdatetime.h  axistickerfixed.cpp  axistickerfixed.h  axistickerlog.cpp  axistickerlog.h  axistickerpi.cpp  axistickerpi.h  axistickertext.cpp  axistickertext.h  axistickertime.cpp  axistickertime.h  labelpainter.cpp  labelpainter.h  range.cpp  range.h
libs/qcustomplot/items/: item-bracket.cpp  item-bracket.h  item-curve.cpp  item-curve.h  item-ellipse.cpp  item-ellipse.h  item-line.cpp  item-line.h  item-pixmap.cpp  item-pixmap.h  item-rect.cpp  item-rect.h  item-straightline.cpp  item-straightline.h  item-text.cpp  item-text.h  item-tracer.cpp  item-tracer.h
libs/qcustomplot/layoutelements/: layoutelement-axisrect.cpp  layoutelement-axisrect.h  layoutelement-colorscale.cpp  layoutelement-colorscale.h  layoutelement-legend.cpp  layoutelement-legend.h  layoutelement-textelement.cpp  layoutelement-textelement.h
libs/qcustomplot/plottables/: plottable-bars.cpp  plottable-bars.h  plottable-colormap.cpp  plottable-colormap.h  plottable-curve.cpp  plottable-curve.h  plottable-errorbar.cpp  plottable-errorbar.h  plottable-financial.cpp  plottable-financial.h  plottable-graph.cpp  plottable-graph.h  plottable-statisticalbox.cpp  plottable-statisticalbox.h
libs/qcustomplot/polar/: layoutelement-angularaxis.cpp  layoutelement-angularaxis.h  polargraph.cpp  polargraph.h  polargrid.cpp  polargrid.h  radialaxis.cpp  radialaxis.h
release/: README.md  history.yaml  version.rc.in
src/: app.qrc  app.qss  app.rc  help.css  main.cpp
src/app/: AppSettings.cpp  AppSettings.h  HelpSystem.cpp  HelpSystem.h  ImageUtils.cpp  ImageUtils.h
src/cameras/: Aperture.h  Camera.cpp  Camera.h  CameraBase.cpp  CameraBase.h  CameraTypes.cpp  CameraTypes.h  CameraWorker.h  HardConfigPanel.cpp  HardConfigPanel.h  IdsCamera.cpp  IdsCamera.h  IdsCameraConfig.cpp  IdsCameraConfig.h  IdsComfort.cpp  IdsComfort.h  IdsComfortCamera.cpp  IdsComfortCamera.h  IdsHardConfig.cpp  IdsHardConfig.h  IdsLib.cpp  IdsLib.h  MeasureSaver.cpp  MeasureSaver.h  StillImageCamera.cpp  StillImageCamera.h  TableIntf.cpp  TableIntf.h  VirtualDemoCamera.cpp  VirtualDemoCamera.h  VirtualImageCamera.cpp  VirtualImageCamera.h  WelcomeCamera.cpp  WelcomeCamera.h
src/plot/: BeamGraph.cpp  BeamGraph.h  BeamGraphIntf.cpp  BeamGraphIntf.h  BeamPlotItem.cpp  BeamPlotItem.h  CrosshairOverlay.cpp  CrosshairOverlay.h  Heatmap.cpp  Heatmap.h  PlotExport.cpp  PlotExport.h  RoiRectGraph.cpp  RoiRectGraph.h
src/widgets/: DataTable.cpp  DataTable.h  FileSelector.cpp  FileSelector.h  Plot.cpp  Plot.h  PlotHelpers.cpp  PlotHelpers.h  PlotIntf.cpp  PlotIntf.h  ProfilesView.cpp  ProfilesView.h  StabilityIntf.cpp  StabilityIntf.h  StabilityView.cpp  StabilityView.h  TableIntf.cpp  TableIntf.h
src/windows/: ConfigDialog.cpp  ConfigDialog.h  PlotWindow.cpp  PlotWindow.h
